Bug 842217 - Contacts list swipe and pan gets stuck because of frequent GCs. r=billm